IRS project configurations